test/integration/bad/unnormalized/lupdf_in_trans_data.stan
transformed data {
    real p;
    real y = normal_lupdf(p| 0, 1);
}